plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromActualAnnotationWithParametersInOneLine/js/js.kt
actual annotation class <!LINE_MARKER("descr='Has expects in common module'")!>Ann<!>(
        actual val <!LINE_MARKER("descr='Has expects in common module'; targets=[(text=x; container=common; icon=nodes/Module.svg); (text=y; container=common; icon=nodes/Module.svg)]")!>x<!>: Int, actual val y: String,
        actual val <!LINE_MARKER("descr='Has expects in common module'; targets=[(text=z; container=common; icon=nodes/Module.svg); (text=b; container=common; icon=nodes/Module.svg)]")!>z<!>: Double, actual val b: Boolean
)
